<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="32dp"
        android:text="@string/welcome"
        style="@style/IntroTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/intro_step1"
        style="@style/IntroTextView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/IntroTextView"
            android:text="@string/from"/>

        <EditText
            android:id="@+id/fromHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:ems="2"
            android:maxLength="2"
            style="@style/IntroTextView"
            android:textAlignment="center"
            android:backgroundTint="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/IntroTextView"
            android:text="@string/hours"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/IntroTextView"
            android:text="@string/till"/>

        <EditText
            android:id="@+id/tillHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:ems="2"
            android:maxLength="2"
            style="@style/IntroTextView"
            android:textAlignment="center"
            android:backgroundTint="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/IntroTextView"
            android:text="@string/hours"/>

    </LinearLayout>

</LinearLayout>